--- a/index.html
+++ b/index.html
@@ -8,25 +8,48 @@
     <title>Comenzando con la fotografía</title>
   </head>
   <body>
-  <header>
-    <nav class="titulo">
-      <p id="titulo">Comenzando con la fotografía</p>
-    </nav>
-    <nav class="enlaces">
-      <a href="index.html" class="seleccion">Inicio</a>
-      <a href="paisajes.html">Paisajes</a>
-      <a href="retratos.html">Retratos</a>
-    </nav>
-    </header>
-    <section>
-      <div class="principal">
-        <img id="im1" src="images/omaha.jpg" alt="llegada">
-      </div>
-      <div class="secundario">
-        <img id="im2" src="images/dance.jpg" alt="retrato2">
-        <img id="im3" src="images/chica.jpg" alt="retrato">
-      </div>
-    </section>
-</div>
+
+    <div class="contenedor">
+
+      <header>
+        <div class="titulo">
+Comenzando con la fotografía
+        </div>
+
+        <nav class="enlaces">
+<a href="#">Inicio</a>
+<a href="#">Paisajes</a>
+<a href="#">Retrato</a>
+        </nav>
+      </header>
+
+      <section class="main">
+        <div class="princ">
+       <img src="images/dance.jpg" alt="x">
+       </div>
+        <section class="secun">
+          <div class="s1">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+          <div class="s2">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+        </section>
+      </section>
+      <footer>
+        <section>
+          Contacto
+        </section>
+        <div class="termino">
+          Politicas de uso
+        </div>
+        <div class="Redes sociales">
+          FB, TW, LI
+        </div>
+        <div class="derechos">
+          Derechos reservados.
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
