--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="contenedor">
+    <div class="contenido">
 
       <header>
         <div class="titulo">
@@ -25,14 +25,20 @@ Comenzando con la fotografía
 
       <section class="main">
         <div class="princ">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+          <img src="images/dance.jpg" alt="x">
+
        </div>
         <section class="secun">
           <div class="s1">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        <a href="paisajes.html"><img src="images/mezquita.jpg" alt="y"></a>
+
           </div>
           <div class="s2">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+         <a href="retratos.html"><img src="images/chica.jpg" alt="z"></a>
+
           </div>
         </section>
       </section>
@@ -40,6 +46,10 @@ Comenzando con la fotografía
         <section>
           Contacto
         </section>
+        <div class="contacto">
+          <h1>Contacto</h1>
+          Av. del Bosque, Manzana 44B L15
+        </div>
         <div class="termino">
           Politicas de uso
         </div>
