Se añadieron los efectos a la imagen, falta añadirle el efecto de sombra solicitado en las imagenes del div .secun y el footer fue modificado ppara ser llenado.

--- a/index.html
+++ b/index.html
@@ -43,21 +43,22 @@ Comenzando con la fotografía
         </section>
       </section>
       <footer>
-        <section>
-          Contacto
-        </section>
         <div class="contacto">
           <h1>Contacto</h1>
-          Av. del Bosque, Manzana 44B L15
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
         </div>
         <div class="termino">
-          Politicas de uso
+          <h1>Politicas de uso</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </div>
-        <div class="Redes sociales">
-          FB, TW, LI
+        <div class="redes-sociales">
+          <h1>Redes Sociales</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </div>
         <div class="derechos">
-          Derechos reservados.
+          <h1>Derechos</h1>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </div>
       </footer>
     </div>
