Esta terminada la pagina principal, falta hacer el media query para dispositivos moviles menores de 900px y las paginas auxiliares

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@ Comenzando con la fotografía
       <section class="main">
         <div class="princ">
 
-          <img src="images/dance.jpg" alt="x">
+          <img id="imagen1" src="images/dance.jpg" alt="x">
 
        </div>
         <section class="secun">
           <div class="s1">
 
-        <a href="paisajes.html"><img src="images/mezquita.jpg" alt="y"></a>
+        <a href="paisajes.html"><img id="imagen2" src="images/mezquita.jpg" alt="y"></a>
 
           </div>
           <div class="s2">
 
-         <a href="retratos.html"><img src="images/chica.jpg" alt="z"></a>
+         <a href="retratos.html"><img id="imagen3" src="images/chica.jpg" alt="z"></a>
 
           </div>
         </section>
@@ -45,20 +45,29 @@ Comenzando con la fotografía
       <footer>
         <div class="contacto">
           <h1>Contacto</h1>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <ul>
+            <li><a href="mailto:comenzandofotografia@gmail.com">comenzandofotografia@gmail.com</a></li>
+            <li>Av. del Bosque, Mz 44B L15, Nacajuca Tabasco</li>
+            <li>(01 55)99 33 93 99 53</li>
+          </ul>
+
         </p>
         </div>
         <div class="termino">
           <h1>Politicas de uso</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Conoce nuestros términos y condiciones...
         </div>
         <div class="redes-sociales">
           <h1>Redes Sociales</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <ul>
+            <li> <img src="images/fb.png" alt="logo fb">ComenzandoFotografia </li>
+            <li> <img src="images/tw.png" alt="logo tw">@ComenzandoFotografia</li>
+            <li> <img src="images/ig.jpg" alt="logo ig">ComenzandoFotografia </li>
+          </ul>
         </div>
         <div class="derechos">
           <h1>Derechos</h1>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Miguel Eduardo San Martín Suárez ©Derechos Reservados 2018
         </div>
       </footer>
     </div>
