ha sido terminada index.html, falta empezar y terminar paisajes.html y retratos.html

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ Comenzando con la fotografía
         <section class="secun">
           <div class="s1">
 
-        <a href="paisajes.html"><img id="imagen2" src="images/mezquita.jpg" alt="y"></a>
+        <a href="paisajes.html"><img id="imagen2" src="images/mezquita.jpg" alt="y">Paisajes</a>
 
           </div>
           <div class="s2">
 
-         <a href="retratos.html"><img id="imagen3" src="images/chica.jpg" alt="z"></a>
+         <a href="retratos.html"><img id="imagen3" src="images/chica.jpg" alt="z">Retratos</a>
 
           </div>
         </section>
