paisajes.html ha sido creada, falta darle efecto a las imagenes y hacerle el media querie. Tambien falta retratos.html

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ Comenzando con la fotografía
         </div>
 
         <nav class="enlaces">
-<a href="#">Inicio</a>
-<a href="#">Paisajes</a>
-<a href="#">Retrato</a>
+<a href="index.html">Inicio</a>
+<a href="paisajes.html">Paisajes</a>
+<a href="retratos.html">Retratos</a>
         </nav>
       </header>
 
