--- a/retratos.html
+++ b/retratos.html
@@ -24,22 +24,22 @@ Comenzando con los Paisajes
       </header>
       <section class="main">
         <div class="contenedor1">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         <div class="contenedor2">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         <div class="contenedor3">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         <div class="contenedor4">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         <div class="contenedor5">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         <div class="contenedor6">
-          <img src="images/villa.jpg" alt="villa">
+          <img src="images/valquiria.jpg" alt="villa">
         </div>
         </section>
 
